[metadata]
name = stardis
author = Wolfgang Kerzendorf
author_email = wkerzendorf@gmail.com
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = http://docs.astropy.org/projects/package-template/
description = Stellar Radiative transfer
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = tardis-sn/stardis

[options]
zip_safe = False
packages = find:
python_requires = >=3.9
setup_requires = setuptools_scm
install_requires =
    astropy


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
stardis = data/* , config_schema.yml

[tool:pytest]
testpaths = "stardis" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    stardis/_astropy_init*
    stardis/conftest.py
    stardis/*setup_package*
    stardis/tests/*
    stardis/*/tests/*
    stardis/extern/*
    stardis/version*
    */stardis/_astropy_init*
    */stardis/conftest.py
    */stardis/*setup_package*
    */stardis/tests/*
    */stardis/*/tests/*
    */stardis/extern/*
    */stardis/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
