[metadata]
name = stardis
author = TARDIS Collaboration
author_email = 
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://tardis-sn.github.io/stardis
description = STARDIS Stellar Radiative transfer
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires = 


[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main


[options.extras_require]
all =
test =
    pytest
    pytest-doctestplus
    pytest-cov
    nbmake
docs =
    sphinx
    sphinx-automodapi

[tool:pytest]
testpaths = "stardis" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst --nbmake --nbmake-kernel=python3

[coverage:run]
omit =
  stardis/__init*
  stardis/conftest.py
  stardis/*setup_package*
  stardis/tests/*
  stardis/*/tests/*
  stardis/extern/*
  stardis/version*
  */stardis/__init*
  */stardis/conftest.py
  */stardis/*setup_package*
  */stardis/tests/*
  */stardis/*/tests/*
  */stardis/extern/*
  */stardis/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
